NetBSD Problem Report #20362

Received: (qmail 9363 invoked by uid 605); 16 Feb 2003 02:19:14 -0000
Message-Id: <200302160218.h1G2Igx21139@weed.internal.vpn>
Date: Sat, 15 Feb 2003 18:18:42 -0800 (PST)
From: eclipsetyperx@yahoo.com
Sender: gnats-bugs-owner@netbsd.org
Reply-To: eclipsetyperx@yahoo.com
To: gnats-bugs@gnats.netbsd.org
Subject: mfs mounted file system refuseing to unmount
X-Send-Pr-Version: 3.95

>Number:         20362
>Category:       kern
>Synopsis:       mfs mounted file system refuseing to unmount
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Feb 16 02:20:00 +0000 2003
>Closed-Date:    Sun Dec 20 15:22:51 +0000 2009
>Last-Modified:  Sun Dec 20 15:25:01 +0000 2009
>Originator:     Scott
>Release:        NetBSD 1.6I
>Organization:
    CEO LiquidFiber.Net
>Environment:


System: NetBSD weed.internal.vpn 1.6I NetBSD 1.6I (GENERIC) #0: Wed Oct 2 12:05:28 EST 2002 root@mofo:/data1/netbsd/current/20021002/i386/obj/sys/arch/i386/compile/GENERIC i386
Architecture: i386
Machine: i386
>Description:
        mounted a memory file system of 256mb (1024 of free mem) and left it for about two days to come back to it to unmount it and umount is refuseing to see it, even tho mount shows it fine See Example:
	bash-2.05b# mount
	/dev/sd0a on / type ffs (local)
	/dev/sd0e on /usr type ffs (local)
	mfs:1388 on /usr/pkgsrc/www/squid/ type mfs (local)

	bash-2.05b# umount /usr/pkgsrc/www/squid/
	umount: /usr/pkgsrc/www/squid: not currently mounted

>How-To-Repeat:
        I took /usr/pkgsrc/www/squid/ and moved all of it's contents to a empty directory named ../backup then mounted /usr/pkgsrc/www/squid/ with a memory file system, copied all of it's contents back into the squid directory compiled squid and installed squid, walked away from it for about 2 days, came back to it, moved everything out of squid and back into backup and tryed to unmount it useing,./squid (from /usr/pkgsrc/www/) /usr/pkgsrc/www/squid/ as the unmount points, both giving me the same error, if i try to rm -rf squid i get a device busy error,this isn't a critical thing but i belive that it should be looked into before the 1.6.1 release.  If anyone has any questions about this feel free to email me.
BTW: This is a P4 2.0 ghz machine useing the i845G intel chipset, a gig of DDR 333 memory and a AHA-2940 scsi controller that is running a WD 36gb 10k rpm driveas it's hard drive.              
>Fix:
     Reboot?

>Release-Note:
>Audit-Trail:

From: Alan Barrett <apb@cequrux.com>
To: eclipsetyperx@yahoo.com
Cc: gnats-bugs@gnats.netbsd.org
Subject: Re: port-i386/20362: mfs mounted file system refuseing to unmount
Date: Sun, 16 Feb 2003 09:55:36 +0200

 On Sat, 15 Feb 2003, eclipsetyperx@yahoo.com wrote:
 > 	bash-2.05b# mount
 > 	/dev/sd0a on / type ffs (local)
 > 	/dev/sd0e on /usr type ffs (local)
 > 	mfs:1388 on /usr/pkgsrc/www/squid/ type mfs (local)

 I guess you used mount_mfs and explicitly specified the trailing slash
 (which is a bad idea).  If you had used "mount -t mfs", then even if you
 had specified a trailing slash, the sanity checks in mount(8) should
 have removed it.

 > 	bash-2.05b# umount /usr/pkgsrc/www/squid/
 > 	umount: /usr/pkgsrc/www/squid: not currently mounted

 The umount command sanity checks its args and removes the trailing slash.
 Try using "umount -F /usr/pkgsrc/www/squid/" to bypass the sanity checks.

 --apb (Alan Barrett)
Responsible-Changed-From-To: port-i386-maintainer->kern-bug-people 
Responsible-Changed-By: tron 
Responsible-Changed-When: Sun Feb 16 05:23:47 PST 2003 
Responsible-Changed-Why:  
This bug (if it is a bug at all) is not i386 specific. 

From: "Jeremy C. Reed" <reed@reedmedia.net>
To: eclipsetyperx@yahoo.com
Cc: gnats-bugs@gnats.netbsd.org, <netbsd-bugs@netbsd.org>
Subject: Re: port-i386/20362: mfs mounted file system refuseing to unmount
Date: Mon, 17 Feb 2003 08:19:51 -0800 (PST)

 > >Fix:
 >      Reboot?

 You can just kill the process 1388 (so you don't need to reboot).

 Also, I wonder if the trailing "/" is significant to this problem.

    Jeremy C. Reed
    http://bsd.reedmedia.net/




From: Takahiro Kambe <taca@back-street.net>
To: reed@reedmedia.net
Cc: eclipsetyperx@yahoo.com, gnats-bugs@gnats.netbsd.org,
  netbsd-bugs@netbsd.org
Subject: Re: port-i386/20362: mfs mounted file system refuseing to unmount
Date: Tue, 18 Feb 2003 01:24:35 +0900 (JST)

 In message <Pine.LNX.4.43.0302170817160.31149-100000@pilchuck.reedmedia.net>
 	on Mon, 17 Feb 2003 08:19:51 -0800 (PST),
 	"Jeremy C. Reed" <reed@reedmedia.net> wrote:
 > > >Fix:
 > >      Reboot?
 > 
 > You can just kill the process 1388 (so you don't need to reboot).
 Or use -f option of umount(8)?

 -- 
 Takahiro Kambe <taca@back-street.net>


From: Alan Barrett <apb@cequrux.com>
To: eclipsetyperx@yahoo.com
Cc: gnats-bugs@gnats.netbsd.org
Subject: Re: port-i386/20362: mfs mounted file system refuseing to unmount
Date: Wed, 19 Feb 2003 09:13:26 +0200

 On Sun, 16 Feb 2003, Alan Barrett wrote:
 > Try using "umount -F /usr/pkgsrc/www/squid/" to bypass the sanity checks.

 I meant "-R", not "-F".

 --apb (Alan Barrett)
State-Changed-From-To: open->closed
State-Changed-By: dsl@NetBSD.org
State-Changed-When: Sun, 20 Dec 2009 15:22:51 +0000
State-Changed-Why:
mount_mfs changed to push pathname through realpath (as other fs).
umount mfs:pid would have worked, as did -R


From: David Laight <dsl@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/20362 CVS commit: src/sbin/newfs
Date: Sun, 20 Dec 2009 15:21:13 +0000

 Module Name:	src
 Committed By:	dsl
 Date:		Sun Dec 20 15:21:13 UTC 2009

 Modified Files:
 	src/sbin/newfs: Makefile newfs.c

 Log Message:
 Push the mount path for mount_mfs through realpath().
 This matches what other fs do.
 Fixes PR/20362


 To generate a diff of this commit:
 cvs rdiff -u -r1.34 -r1.35 src/sbin/newfs/Makefile
 cvs rdiff -u -r1.105 -r1.106 src/sbin/newfs/newfs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.