Push the mount path for mount_mfs through realpath(). This matches what other fs do. Fixes PR/20362